--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
     });
 
     socket.on('chat message', function (msg) {
+        console.log(msg);
         var item = document.createElement('li');
         item.textContent = msg;
         messages.appendChild(item);
