user can join room

--- a/index.html
+++ b/index.html
@@ -123,13 +123,10 @@
     var messages = document.getElementById('messages');
     var form = document.getElementById('form');
     var input = document.getElementById('input');
-    var btnRoom = document.querySelector(`.btn-room`);
+    const btnRoom = document.querySelector(`.btn-room`);
     const handleClickBtn = e => {
-            console
             socket.emit(`join room`, `one`);
     }
-
-
     btnRoom.addEventListener(`click` , handleClickBtn);
 
     form.addEventListener('submit', function (e) {
