--- a/public/index.html
+++ b/public/index.html
@@ -13,35 +13,11 @@
         <input class="input" id="input" autocomplete="off" /><button>Send</button>
     </form>
     <button class="btn-room">Join room</button>
+    <button class="btn-room-client">Join room</button>
+
     <script src="/socket.io/socket.io.js"></script>
-<script>
-    var socket = io();
-
-    var messages = document.getElementById('messages');
-    var form = document.getElementById('form');
-    var input = document.getElementById('input');
-    const btnRoom = document.querySelector(`.btn-room`);
-    const handleClickBtn = e => {
-            socket.emit(`join room`, `one`);
-    }
-    btnRoom.addEventListener(`click` , handleClickBtn);
-
-    form.addEventListener('submit', function (e) {
-        e.preventDefault();
-        if (input.value) {
-            socket.emit('chat message', input.value);
-            input.value = '';
-        }
-    });
-
-    socket.on('chat message', function (msg) {
-        console.log(msg);
-        var item = document.createElement('li');
-        item.textContent = msg;
-        messages.appendChild(item);
-        window.scrollTo(0, document.body.scrollHeight);
-    });
-</script>
-<script src="./game.js"></script>
+    <script src="./game.js"></script>
+    <script src="./socketClient.js"></script>
+    <script src="../scenes/GameScene.js"></script>
 </body>
 </html>
