--- a/public/index.html
+++ b/public/index.html
@@ -8,16 +8,16 @@
 </head>
 
 <body>
-    <ul id="messages" class="messages"></ul>
-    <form id="form" action="POST" class="form">
-        <input class="input" id="input" autocomplete="off" /><button>Send</button>
-    </form>
-    <button class="btn-room">Join room</button>
-    <button class="btn-room-client">Join room</button>
+        <ul id="messages" class="messages"></ul>
+        <form id="form" action="POST" class="form">
+            <input class="input" id="input" autocomplete="off" /><button>Send</button>
+        </form>
+        <button class="btn-room">Join room</button>
+        <button class="btn-room-client">Join room</button>
 
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="./game.js"></script>
-    <script src="./socketClient.js"></script>
-    <script src="../scenes/GameScene.js"></script>
+        <script src="/socket.io/socket.io.js"></script>
+        <script src="./game.js"></script>
+        <div id="phaser-example">
+        </div>
 </body>
 </html>
