added home menu to game

--- a/public/assets/text/menu.html
+++ b/public/assets/text/menu.html
@@ -69,11 +69,10 @@
 </style>
 
 <div class="login">
-    <button name="leaveRooms">Back to menu</button>
-    <h2>Join a room</h2>
+    <h2>Project Dance Doctor</h2>
     <form action="get" name="form">
-        <input type="checkbox" id="rooms" name="room1" value="true" checked> doctor
-        <input type="submit" value="Join operation" name="join">
+        <input type="checkbox" id="gamebox" name="game" value="true" checked> Play game
+        <input type="submit" value="play game" name="game">
     </form>
 </div>
 <div class="shadow"></div>
