--- a/public/assets/text/tutorial.html
+++ b/public/assets/text/tutorial.html
@@ -69,11 +69,7 @@
 </style>
 
 <div class="login">
-    <button name="tutorial">to the tutorial</button>
-    <h2>Project Dance Doctor</h2>
-    <form action="get" name="form">
-        <input type="checkbox" id="gamebox" name="game" value="true" checked> Play game
-        <input type="submit" value="play game" name="game">
-    </form>
+    <button name="mainmenu">Back to menu</button>
+    <h2>Tutorial</h2>
 </div>
 <div class="shadow"></div>
