rooms are now added

--- a/public/assets/text/rooms.html
+++ b/public/assets/text/rooms.html
@@ -72,8 +72,9 @@
     <button name="leaveRooms">Back to menu</button>
     <h2>Join a room</h2>
     <form action="get" name="form">
-        <input type="checkbox" id="rooms" name="room1" value="true" checked> doctor
-        <input type="submit" value="Join operation" name="join">
+        <input type="checkbox" id="room1" name="room" value="true" checked> Room 1
+        <input type="checkbox" id="room2" name="room" value="true"> Room 2
+        <input type="submit" value="Join operation" name="room1">
     </form>
 </div>
 <div class="shadow"></div>
