--- a/public/assets/text/rooms.html
+++ b/public/assets/text/rooms.html
@@ -76,5 +76,6 @@
         <input type="checkbox" id="room2" name="room" value="true"> Room 2
         <input type="submit" value="Join operation" name="room1">
     </form>
+    <button class="newroom" name="newRoom" value="newRoom">newRoom</button>
 </div>
 <div class="shadow"></div>
