--- a/public/assets/text/home.html
+++ b/public/assets/text/home.html
@@ -1,10 +1,51 @@
 <style>
     .black {
-        background-color: lightblue;
+        background-color: black;
+        background-image: url("./assets/design/backgroundstar.png");
+        background-position: 50px 50px;
+        background-repeat: no-repeat;
+        background-size: cover;
+        position: relative;
         width: 1250px;
         height: 800px;
         padding: 230px;
     }
+
+    @-webkit-keyframes rotating {
+    from {
+        -webkit-transform: rotate(0deg);
+        -o-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    to {
+        -webkit-transform: rotate(360deg);
+        -o-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+    }
+    @keyframes rotating {
+    from {
+        -ms-transform: rotate(0deg);
+        -moz-transform: rotate(0deg);
+        -webkit-transform: rotate(0deg);
+        -o-transform: rotate(0deg);
+        transform: rotate(0deg);
+    }
+    to {
+        -ms-transform: rotate(360deg);
+        -moz-transform: rotate(360deg);
+        -webkit-transform: rotate(360deg);
+        -o-transform: rotate(360deg);
+        transform: rotate(360deg);
+    }
+    }
+    .rotating {
+    -webkit-animation: rotating 2s linear infinite;
+    -moz-animation: rotating 2s linear infinite;
+    -ms-animation: rotating 2s linear infinite;
+    -o-animation: rotating 2s linear infinite;
+    animation: rotating 2s linear infinite;
+    }
 </style>
-<div class="black">
+<div class="black ">
 </div>
