--- a/public/assets/text/doctorwin.html
+++ b/public/assets/text/doctorwin.html
@@ -11,7 +11,7 @@
         align-items: center;
     }
 
-    input[type="submit"] {
+    .submitDoc {
         width: 240px;
         height: 35px;
         display: block;
@@ -46,10 +46,6 @@
         width: 270px;
     }
 
-    input[type="submit"]:active {
-        top: 3px;
-        box-shadow: inset 0px 1px 0px #2ab7ec, 0px 2px 0px 0px #31524d, 0px 5px 3px #999;
-    }
 
     .label {
         width: 300px;
