--- a/public/assets/text/tutorial.html
+++ b/public/assets/text/tutorial.html
@@ -11,7 +11,7 @@
         align-items: center;
     }
 
-    input[type="submit"] {
+    .submitTut {
         width: 240px;
         height: 35px;
         display: block;
@@ -44,11 +44,6 @@
         margin: 30px auto;
         opacity: 0.2;
         width: 270px;
-    }
-
-    input[type="submit"]:active {
-        top: 3px;
-        box-shadow: inset 0px 1px 0px #2ab7ec, 0px 2px 0px 0px #31524d, 0px 5px 3px #999;
     }
 
     .label {
