header is added

--- a/public/assets/text/menu.html
+++ b/public/assets/text/menu.html
@@ -25,6 +25,9 @@
         position: relative;
         cursor: pointer;
         border: none;
+    }
+
+    .marginHome {
         margin-top: 10px;
     }
 
@@ -79,6 +82,6 @@
             <p class="hide">Play game</p>
             <input class="submitMenu" type="submit" value="play" name="game">
         </form>
-        <button class="submitMenu" name="tutorial">tutorial</button>
+        <button class="submitMenu marginHome" name="tutorial">tutorial</button>
     </div>
 </div>
