--- a/public/assets/text/menu.html
+++ b/public/assets/text/menu.html
@@ -15,7 +15,6 @@
         font-weight: 400;
         font-style: normal;
         font-size: 30px;
-        width: 235px;
         background-color: #ff3e36;
         height: 40px;
         display: flex;
@@ -27,24 +26,12 @@
         border: none;
     }
 
+    .widthMenu {
+        width: 235px;
+    }
+
     .marginHome {
         margin-top: 10px;
-    }
-
-    .label {
-        width: 300px;
-        height: 400px;
-        background-color: white;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        border-radius: .2rem;
-    }
-
-    .labels {
-        display: flex;
-        width: 620px;
-        justify-content: space-between;
     }
 
     .title-font {
@@ -80,8 +67,8 @@
         <form action="get" name="form">
             <input class="hide" type="checkbox" id="gamebox" name="game" value="true" checked>
             <p class="hide">Play game</p>
-            <input class="submitMenu" type="submit" value="play" name="game">
+            <input class="submitMenu widthMenu" type="submit" value="play" name="game">
         </form>
-        <button class="submitMenu marginHome" name="tutorial">tutorial</button>
+        <button class="submitMenu widthMenu marginHome" name="tutorial">tutorial</button>
     </div>
 </div>
