room is now selected

--- a/public/assets/text/rooms.html
+++ b/public/assets/text/rooms.html
@@ -98,7 +98,7 @@
                 <input class="hide" type="radio" id="room1" name="room" value="true" checked> Waiting room 1
             </label>
             <div class="roomsIndie">
-                <p class="room-input room-inputIndie">0/2</p>
+                <p id="room1Counter" class="room-input room-inputIndie">0/2</p>
                 <input class="submitButtonInput" type="submit" value="Join" name="room1">
             </div>        
         </div>
@@ -107,7 +107,7 @@
                 <input class="hide" type="radio" id="room2" name="room" value="true" > Waiting room 2
             </label>
             <div class="roomsIndie">
-                <p class="room-input room-inputIndie">0/2</p>
+                <p id="room2Counter" class="room-input room-inputIndie room2Counter">0/2</p>
                 <input class="submitButtonInput" type="submit" value="Join" name="room2">
             </div>
         </div>
@@ -116,7 +116,7 @@
                 <input class="hide" type="radio" id="room3" name="room" value="true" > Waiting room 3
             </label>
             <div class="roomsIndie">
-                <p class="room-input room-inputIndie">0/2</p>
+                <p id="room3Counter" class="room-input room-inputIndie room3Counter">0/2</p>
                 <input class="submitButtonInput" type="submit" value="Join" name="room3">
             </div>
         </div>
@@ -125,7 +125,7 @@
                 <input class="hide" type="radio" id="room4" name="room" value="true" > Waiting room 4
             </label>
             <div class="roomsIndie">
-                <p class="room-input room-inputIndie">0/2</p>
+                <p id="room4Counter" class="room-input room-inputIndie room4Counter">0/2</p>
                 <input class="submitButtonInput" type="submit" value="Join" name="room4">
             </div>        
         </div>
@@ -134,7 +134,7 @@
                 <input class="hide" type="radio" id="room5" name="room" value="true" > Waiting room 5
             </label>
             <div class="roomsIndie">
-                <p class="room-input room-inputIndie">0/2</p>
+                <p id="room5Counter" class="room-input room-inputIndie room5Counter">0/2</p>
                 <input class="submitButtonInput" type="submit" value="Join" name="room5">
             </div>        
         </div>
