--- a/public/assets/text/loginform.html
+++ b/public/assets/text/loginform.html
@@ -50,7 +50,7 @@
 <div class="login">
     <div class="bordermenu_bottom">
         <button name="leaveRoom" class="moreWidth submitMenu marginMenu downButton">Leave Waiting Room</button>
-        <h2 class="titleMenu">Waiting Room</h2>
+        <h2 class="titleMenu">Waiting Room <span id="roomNumber">1</span></h2>
     </div>
     <form action="get" name="form" class="rooms form-character">
         <div class="labels-login box-person">
