--- a/public/assets/text/loginform.html
+++ b/public/assets/text/loginform.html
@@ -56,7 +56,7 @@
             <label for="doctor" class="label-flex">
                 <img src="./assets/design/doctorselect.png" alt="doctor" width="225" height="320">
                 <span>
-                    <span>Select Doctor</span><input type="radio" id="doctor" name="choose" value="true" checked>
+                    <span>Select Doctor</span><input type="radio" id="doctor" name="choose" value="true" required >
                 </span>
             </label>
             <label for="patient" class="label-flex">
