--- a/public/assets/text/loginform.html
+++ b/public/assets/text/loginform.html
@@ -45,6 +45,10 @@
     .topmarginLogin {
         margin-top: 20px;
     }
+
+    .nothing {
+        display: none;
+    }
 </style>
 
 <div class="login">
@@ -66,6 +70,6 @@
                 </span>
             </label>
         </div>
-        <input class="submitButtonInput topmarginLogin" type="submit" value="Lock Desission" name="loginButton">
+        <input class="submitButtonInput topmarginLogin" type="submit" id="submitlogin" value="Lock Desission" name="loginButton">
     </form>
 </div>
