--- a/public/assets/text/countdown.html
+++ b/public/assets/text/countdown.html
@@ -1,8 +1,12 @@
 <style>
+    .margintop {
+        margin-top: -105px;
+        margin-left: -80px;
+    }
 </style>
 
 <div class="loginMenu opacity">
     <div class="mainMenu">
-        <button class="submitMenu widthMenu" name="tutorial">Game starts in <span id="count">5</span></button>
+        <button class="submitMenu margintop" name="tutorial">Game starts in...<span id="count">5</span></button>
     </div>
 </div>
