--- a/public/assets/text/loginform.html
+++ b/public/assets/text/loginform.html
@@ -70,6 +70,6 @@
                 </span>
             </label>
         </div>
-        <input class="submitButtonInput topmarginLogin" type="submit" id="submitlogin" value="Waiting" name="loginButton">
+        <input class="submitButtonInput topmarginLogin" type="submit" id="submitlogin" value="Waiting for player" name="loginButton">
     </form>
 </div>
