socket rooms are fixed and you now can only join room if there are no two players in it

--- a/public/assets/text/rooms.html
+++ b/public/assets/text/rooms.html
@@ -99,7 +99,7 @@
             </label>
             <div class="roomsIndie">
                 <p id="room1Counter" class="room-input room-inputIndie">0/2</p>
-                <input class="submitButtonInput" type="submit" value="Join" name="room1">
+                <input id="room1Submit" class="submitButtonInput" type="submit" value="Join" name="room1">
             </div>        
         </div>
         <div  class="room-div borderBottomGrey">
@@ -108,7 +108,7 @@
             </label>
             <div class="roomsIndie">
                 <p id="room2Counter" class="room-input room-inputIndie room2Counter">0/2</p>
-                <input class="submitButtonInput" type="submit" value="Join" name="room2">
+                <input id="room2Submit" class="submitButtonInput" type="submit" value="Join" name="room2">
             </div>
         </div>
         <div  class="room-div borderBottomGrey">
@@ -117,7 +117,7 @@
             </label>
             <div class="roomsIndie">
                 <p id="room3Counter" class="room-input room-inputIndie room3Counter">0/2</p>
-                <input class="submitButtonInput" type="submit" value="Join" name="room3">
+                <input id="room3Submit" class="submitButtonInput" type="submit" value="Join" name="room3">
             </div>
         </div>
         <div  class="room-div borderBottomGrey">
@@ -126,7 +126,7 @@
             </label>
             <div class="roomsIndie">
                 <p id="room4Counter" class="room-input room-inputIndie room4Counter">0/2</p>
-                <input class="submitButtonInput" type="submit" value="Join" name="room4">
+                <input id="room4Submit" class="submitButtonInput" type="submit" value="Join" name="room4">
             </div>        
         </div>
         <div  class="room-div">
@@ -135,7 +135,7 @@
             </label>
             <div class="roomsIndie">
                 <p id="room5Counter" class="room-input room-inputIndie room5Counter">0/2</p>
-                <input class="submitButtonInput" type="submit" value="Join" name="room5">
+                <input id="room5Submit" class="submitButtonInput" type="submit" value="Join" name="room5">
             </div>        
         </div>
     </form>
