end of gamehtml fixed and timer to leave

--- a/public/assets/text/menu.html
+++ b/public/assets/text/menu.html
@@ -68,7 +68,7 @@
             <input class="hide" type="checkbox" id="gamebox" name="game" value="true" checked>
             <p class="hide">Play game</p>
             <input class="submitMenu widthMenu" type="submit" value="play" name="game">
+            <!-- <button class="submitMenu widthMenu marginHome" name="tutorial">tutorial</button> -->
         </form>
-        <button class="submitMenu widthMenu marginHome" name="tutorial">tutorial</button>
     </div>
 </div>
