--- a/public/assets/text/patientwin.html
+++ b/public/assets/text/patientwin.html
@@ -42,8 +42,11 @@
     }
 </style>
 
-<div class="login">
-    <button name="mainmenu">Back to menu</button>
-    <h2>the patient has won</h2>
+<div class="menu">
+    <div class="bordermenu_bottom">
+        <h2 class="titleMenu">Patient Wins</h2>
+    </div>
+    <form action="get" name="form" class="rooms">
+            <label class="room-input" for="room4"> Patient has won the game. </label>
+    </form>
 </div>
-<div class="shadow"></div>
