--- a/public/assets/text/doctorwin.html
+++ b/public/assets/text/doctorwin.html
@@ -35,8 +35,11 @@
     }
 </style>
 
-<div class="login">
-    <button name="mainmenu">Back to menu</button>
-    <h2>the doctor has won</h2>
+<div class="menu">
+    <div class="bordermenu_bottom">
+        <h2 class="titleMenu">Doctor Wins</h2>
+    </div>
+    <form action="get" name="form" class="rooms">
+        <label class="room-input" for="room4"> Doctor has won the game. </label>
+    </form>
 </div>
-<div class="shadow"></div>
